build: switch to vite because webpack is slow

--- a/config.ini
+++ b/config.ini
@@ -1,1 +1,2 @@
-mods_path=D:\Games\MX Bikes\mods\PiBoSo\MX Bikes
+mods_folder=D:\SteamLibrary\steamapps\common\MX Bikes\mods
+base_game_directory=D:\SteamLibrary\steamapps\common\MX Bikes
