--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
 	"compilerOptions": {
-		"target": "ES6",
-		"allowJs": true,
+		"jsx": "react",
+		"target": "ESNext",
 		"module": "commonjs",
+		"allowJs": true,
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"noImplicitAny": true,
@@ -10,11 +11,6 @@
 		"baseUrl": ".",
 		"outDir": "dist",
 		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"paths": {
-			"*": ["node_modules/*"]
-		},
-		"jsx": "react-jsx"
-	},
-	"include": ["src/**/*"]
+		"resolveJsonModule": true
+	}
 }
