--- a/package.json
+++ b/package.json
@@ -1,58 +1,60 @@
 {
-  "name": "mxbmodmanager",
-  "productName": "mxbmodmanager",
-  "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": ".vite/build/main.js",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
-  },
-  "keywords": [],
-  "author": {
-    "name": "Rob",
-    "email": "bobby.rust121@gmail.com"
-  },
-  "license": "MIT",
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "electron"
-    ]
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.8.0",
-    "@electron-forge/maker-deb": "^7.8.0",
-    "@electron-forge/maker-rpm": "^7.8.0",
-    "@electron-forge/maker-squirrel": "^7.8.0",
-    "@electron-forge/maker-zip": "^7.8.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
-    "@electron-forge/plugin-fuses": "^7.8.0",
-    "@electron-forge/plugin-vite": "^7.8.0",
-    "@electron/fuses": "^1.8.0",
-    "@types/electron-squirrel-startup": "^1.0.2",
-    "@types/ini": "^4.1.1",
-    "@types/mkdirp": "^2.0.0",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "@types/yauzl": "^2.10.3",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "electron": "35.1.2",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.0",
-    "ts-node": "^10.0.0",
-    "typescript": "~4.5.4",
-    "vite": "^5.0.12"
-  },
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.1",
-    "ini": "^5.0.0",
-    "mkdirp": "^3.0.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "yauzl": "^3.2.0"
-  }
+	"name": "mxbmodmanager",
+	"productName": "mxbmodmanager",
+	"version": "1.0.0",
+	"description": "My Electron application description",
+	"main": ".vite/build/main.js",
+	"scripts": {
+		"start": "electron-forge start",
+		"package": "electron-forge package",
+		"make": "electron-forge make",
+		"publish": "electron-forge publish",
+		"lint": "eslint --ext .ts,.tsx ."
+	},
+	"keywords": [],
+	"author": {
+		"name": "Rob",
+		"email": "bobby.rust121@gmail.com"
+	},
+	"license": "MIT",
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"electron",
+			"electron-winstaller",
+			"esbuild"
+		]
+	},
+	"devDependencies": {
+		"@electron-forge/cli": "^7.8.0",
+		"@electron-forge/maker-deb": "^7.8.0",
+		"@electron-forge/maker-rpm": "^7.8.0",
+		"@electron-forge/maker-squirrel": "^7.8.0",
+		"@electron-forge/maker-zip": "^7.8.0",
+		"@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
+		"@electron-forge/plugin-fuses": "^7.8.0",
+		"@electron-forge/plugin-vite": "^7.8.0",
+		"@electron/fuses": "^1.8.0",
+		"@types/electron-squirrel-startup": "^1.0.2",
+		"@types/ini": "^4.1.1",
+		"@types/mkdirp": "^2.0.0",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "^19.0.4",
+		"@types/yauzl": "^2.10.3",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"electron": "35.1.2",
+		"eslint": "^8.0.1",
+		"eslint-plugin-import": "^2.25.0",
+		"ts-node": "^10.0.0",
+		"typescript": "~4.5.4",
+		"vite": "^5.0.12"
+	},
+	"dependencies": {
+		"electron-squirrel-startup": "^1.0.1",
+		"ini": "^5.0.0",
+		"mkdirp": "^3.0.1",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"yauzl": "^3.2.0"
+	}
 }
