feat: saving and loading mods data (incomplete)

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,2 @@
+base_game_folder=D:\SteamLibrary\steamapps\common\MX Bikes
 mods_folder=D:\SteamLibrary\steamapps\common\MX Bikes\mods
-base_game_directory=D:\SteamLibrary\steamapps\common\MX Bikes
