style: ui, feat: install mods [in progress]

--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
 		"vite": "^5.0.12"
 	},
 	"dependencies": {
+		"@electron/remote": "^2.1.2",
 		"electron-squirrel-startup": "^1.0.1",
 		"ini": "^5.0.0",
+		"lucide-react": "^0.487.0",
 		"mkdirp": "^3.0.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
