--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pitkit",
 	"productName": "PitKit",
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"description": "The MX Bikes Mod Manager",
 	"main": ".vite/build/main.js",
 	"scripts": {
@@ -11,10 +11,14 @@
 		"publish": "electron-forge publish",
 		"lint": "eslint --ext .ts,.tsx ."
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/bobby-rust/Pitkit.git"
+	},
 	"keywords": [],
 	"author": {
-		"name": "Rob",
-		"email": "bobby.rust121@gmail.com"
+		"name": "robrustdev",
+		"email": "contact@robrust.dev"
 	},
 	"license": "MIT",
 	"pnpm": {
@@ -33,6 +37,7 @@
 		"@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
 		"@electron-forge/plugin-fuses": "^7.8.0",
 		"@electron-forge/plugin-vite": "^7.8.0",
+		"@electron-forge/publisher-github": "^7.8.0",
 		"@electron/fuses": "^1.8.0",
 		"@types/electron-squirrel-startup": "^1.0.2",
 		"@types/ini": "^4.1.1",
@@ -57,6 +62,7 @@
 		"mkdirp": "^3.0.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"update-electron-app": "^3.1.1",
 		"yauzl": "^3.2.0"
 	}
 }
