--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 	},
 	"dependencies": {
 		"@electron/remote": "^2.1.2",
+		"electron-log": "^5.4.0",
 		"electron-squirrel-startup": "^1.0.1",
 		"ini": "^5.0.0",
 		"lucide-react": "^0.487.0",
