--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"main": ".vite/build/main.js",
 	"scripts": {
 		"dev": "electron-forge start --enable-logging",
+		"test": "vitest",
 		"package": "electron-forge package",
 		"make": "electron-forge make",
 		"publish": "electron-forge publish",
@@ -41,7 +42,6 @@
 		"@electron/fuses": "^1.8.0",
 		"@types/electron-squirrel-startup": "^1.0.2",
 		"@types/ini": "^4.1.1",
-		"@types/mkdirp": "^2.0.0",
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"@types/yauzl": "^2.10.3",
@@ -56,11 +56,12 @@
 	},
 	"dependencies": {
 		"@electron/remote": "^2.1.2",
+		"@supabase/supabase-js": "^2.49.4",
+		"dotenv": "^16.5.0",
 		"electron-log": "^5.4.0",
 		"electron-squirrel-startup": "^1.0.1",
 		"ini": "^5.0.0",
 		"lucide-react": "^0.487.0",
-		"mkdirp": "^3.0.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"update-electron-app": "^3.1.1",
