--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 	"dependencies": {
 		"@electron/remote": "^2.1.2",
 		"@supabase/supabase-js": "^2.49.4",
+		"@tanstack/react-table": "^8.21.3",
 		"dotenv": "^16.5.0",
 		"electron-log": "^5.4.0",
 		"electron-squirrel-startup": "^1.0.1",
@@ -64,6 +65,8 @@
 		"lucide-react": "^0.487.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-hook-form": "^7.56.4",
+		"react-router-dom": "^7.6.0",
 		"update-electron-app": "^3.1.1",
 		"yauzl": "^3.2.0"
 	}
