--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pitkit",
 	"productName": "PitKit",
-	"version": "0.4.4",
+	"version": "0.4.6",
 	"description": "The MX Bikes Mod Manager",
 	"main": ".vite/build/main.js",
 	"scripts": {
@@ -55,9 +55,11 @@
 		"vite": "^5.4.17"
 	},
 	"dependencies": {
+		"@cliqz/adblocker-electron": "^1.34.0",
 		"@electron/remote": "^2.1.2",
 		"@supabase/supabase-js": "^2.49.4",
 		"@tanstack/react-table": "^8.21.3",
+		"cross-fetch": "^4.1.0",
 		"electron-log": "^5.4.0",
 		"electron-squirrel-startup": "^1.0.1",
 		"fast-xml-parser": "^5.2.3",
