--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"eslint": "^8.0.1",
 		"eslint-plugin-import": "^2.25.0",
 		"fs-extra": "^11.3.0",
+		"rollup-plugin-copy": "^3.5.0",
 		"ts-node": "^10.0.0",
 		"typescript": "~4.5.4",
 		"vite": "^5.4.17"
@@ -72,6 +73,7 @@
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.56.4",
 		"react-router-dom": "^7.6.0",
+		"react-toastify": "^11.0.5",
 		"update-electron-app": "^3.1.1",
 		"utf-8-validate": "^5.0.2",
 		"uuid": "^11.1.0",
